# RagEngine

./: .env.production.example  .gitignore  README.md  docker-compose.production.yml  pytest.ini  requirements.txt
api/: routes_documents.py  routes_health.py  routes_query.py  routes_search.py
app/: __init__.py  config.py  dependencies.py  logging_config.py  main.py
data/evals/: full_eval.jsonl  gold_lite.jsonl
docs/: BRANCHING_STRATEGY.md  desktop-release.md  online-release.md  production.md  release.md
docs/codex/: ACTIVE_PROMPT.md  MASTER_RULES.md  status.json
docs/spec/: RAG_ENGINE_V3.md
docs/youtube/: phase-00.md  phase-01.md  phase-02.md  phase-03.md  phase-04.md  phase-05.md  phase-06.md  phase-07.md  phase-08.md  phase-09.md  phase-10.md  phase-11.md  phase-12.md  phase-13A.md  phase-13B.md  phase-13C.md  phase-13D.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
rag_engine/: __init__.py  interfaces.py
rag_engine/evals/: full_eval.py  lightweight_eval.py  run_full_eval.py
rag_engine/generation/: __init__.py  context.py  evidence.py  injection.py  llm.py  prompts.py  query.py  verified_answer.py
rag_engine/ingestion/: chunker.py  parsers.py  pipeline.py
rag_engine/models/: __init__.py
rag_engine/retrieval/: hybrid.py  (+5 more)
scripts/: commit_slice.ps1  run_all_slices.ps1  run_gate.ps1  run_slice.ps1  start_backend.ps1  start_desktop_ui.ps1  start_web_ui.ps1  verify_local_release.ps1  verify_production_config.ps1
(+53 files in other folders)
